[fix][config] Correction config CORS